--- a/cookiesDirective.less
+++ b/cookiesDirective.less
@@ -22,7 +22,7 @@
 
 #cookies-bar p {
     font-size: 14px !important;
-    margin-bottom: 0;
+    margin-bottom: 3px;
     text-align: center !important;
 }
 
